des  加解密，换行符问题。